--- a/src/main/java/resources/application.properties
+++ b/src/main/java/resources/application.properties
@@ -1,1 +1,17 @@
-spring.application.name=Ainidras
+
+#setup server port on 3000
+server.port=3000
+
+
+#setup local h2 database
+spring.datasource.url=jdbc:h2:./data/blogapp
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
